fix overflow

--- a/src/components/popup/popup.less
+++ b/src/components/popup/popup.less
@@ -24,6 +24,7 @@
 	width: 700px;
 	max-width: 90%;
 	height: 500px;
+	max-height: 100%;
 	background: white;
 	display: flex;
 	align-items: center;
